--- a/odoo-custom-addons/heyden/views/loading.xml
+++ b/odoo-custom-addons/heyden/views/loading.xml
@@ -61,8 +61,10 @@
                     <field name="department_id" options="{'no_create': True, 'no_open': True}" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}" />
                 </field>
                 <field name="description" position="after" >
-                    <field name="employee_id" required="1" options ="{'no_open':True,'no_create':True}" />
                     <field name="attachment" />
+                </field>
+                <field name="assigned_to" position="after" >
+                    <field name="employee_id" required="1" options ="{'no_open':True,'no_create':True}" />
                 </field>
             </field>
          </record>
@@ -113,9 +115,59 @@
                         You have <bold><a class="alert-link" href="#outstanding" role="button">outstanding credits</a></bold> for this customer. You can allocate them to mark this invoice as paid.
                     </div>
                 </div>
+                <field name="payment_reference" position="after" >
+                    <field name="employee_id" required="1" options ="{'no_open':True,'no_create':True}" />
+                </field>
 
             </field>
         </record>
+
+        <record id="view_account_payment_form_heyden" model="ir.ui.view" >
+            <field name="name" >account.payment.heyden</field>
+            <field name="model">account.payment</field>
+            <field name="inherit_id" ref="account.view_account_payment_form" />
+            <field name="arch" type="xml">
+                <field name="company_id" position="after" >
+                    <field name="employee_id" required="1" options ="{'no_open':True,'no_create':True}" />
+                </field>
+
+            </field>
+        </record>
+
+
+        <record id="view_picking_form_heyden" model="ir.ui.view" >
+            <field name="name" >stock.picking.heyden</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock.view_picking_form" />
+            <field name="arch" type="xml">
+                <field name="partner_id" position="after" >
+                    <field name="employee_id" required="1" options ="{'no_open':True,'no_create':True}" />
+                </field>
+            </field>
+        </record>
+
+        <record id="view_order_form_heyden" model="ir.ui.view" >
+            <field name="name" >sale.order.heyden</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form" />
+            <field name="arch" type="xml">
+                <field name="partner_id" position="after" >
+                    <field name="employee_id" required="1" options ="{'no_open':True,'no_create':True}" />
+                </field>
+            </field>
+        </record>
+
+        <record id="view_order_form_other_heyden" model="ir.ui.view" >
+            <field name="name" >sale.order.other.heyden</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="kin_loading.view_order_form_other" />
+            <field name="arch" type="xml">
+                <field name="partner_id" position="after" >
+                    <field name="employee_id" required="1" options ="{'no_open':True,'no_create':True}" />
+                </field>
+            </field>
+        </record>
+
 
 
 
