--- a/odoo-custom-addons/kin_account/views/account_payment_view.xml
+++ b/odoo-custom-addons/kin_account/views/account_payment_view.xml
@@ -6,6 +6,12 @@
             <field name="model">account.payment</field>
            <field name="inherit_id" ref="account.view_account_payment_form" />
             <field name="arch" type="xml">
+
+                <xpath expr="//button[@name='action_post']" position="before">
+                    <field name="is_request_approval_sent" invisible="1" />
+                       <button name="btn_request_approval" attrs="{'invisible': [('is_request_approval_sent', '=', True)]}" string="Request Approval" type="object" class="oe_highlight" groups="kin_account.group_account_payment_show_request_approval_btn" />
+                </xpath>
+
                 <button name="action_post" position="after" >
                     <button name="action_receipt_sent" type="object" string="Send by Email"  states="posted" groups="kin_account.group_show_send_by_email_button_receipt"/>
                 </button>
