--- a/odoo-custom-addons/kin_stock/views/stock_view.xml
+++ b/odoo-custom-addons/kin_stock/views/stock_view.xml
@@ -42,6 +42,11 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
 
+                <xpath expr="//button[@name='button_validate']" position="before">
+                    <field name="is_request_approval_sent" invisible="1" />
+                       <button name="btn_request_approval" attrs="{'invisible': [('is_request_approval_sent', '=', True)]}" string="Request Approval" type="object" class="oe_highlight" groups="kin_stock.group_stock_picking_show_request_approval_btn" />
+                </xpath>
+
                  <button name="action_assign"  position="attributes" >
                      <attribute name="groups" >kin_stock.group_check_availability_button</attribute>
                  </button>
@@ -255,7 +260,20 @@
 
 
 
+    <!-- Landed Cost -->
+        <record id='view_stock_landed_cost_form_extend' model='ir.ui.view'>
+            <field name="name">stock.landed.cost.form.extend</field>
+            <field name="model">stock.landed.cost</field>
+            <field name="inherit_id" ref="stock_landed_costs.view_stock_landed_cost_form" />
+            <field name="arch" type="xml">
+                <button name="button_validate" position="before">
+                    <field name="is_request_approval_sent" invisible="1" />
+                    <button name="btn_request_approval" attrs="{'invisible': [('is_request_approval_sent', '=', True)]}" string="Request Approval" type="object" class="oe_highlight" groups="kin_stock.group_landed_cost_show_request_approval_btn" />
+                </button>
 
+
+            </field>
+        </record>
 
 
 
