--- a/odoo-custom-addons/kin_account/views/account_view.xml
+++ b/odoo-custom-addons/kin_account/views/account_view.xml
@@ -53,7 +53,10 @@
 
                 <xpath expr="//button[@name='action_post']" position="before">
                     <field name="is_request_approval_sent" invisible="1" />
-                       <button name="btn_request_approval" attrs="{'invisible': [('is_request_approval_sent', '=', True)]}" string="Request Approval" type="object" class="oe_highlight" groups="kin_account.group_account_move_show_request_approval_btn" />
+                       <button name="btn_request_approval" attrs="{'invisible': ['|',('is_request_approval_sent', '=', True),('move_type', 'not in', ('out_invoice', 'out_refund'))]}" string="Request Approval" type="object" class="oe_highlight" groups="kin_account.group_account_move_show_request_approval_invoice_btn" />
+                       <button name="btn_request_approval" attrs="{'invisible': ['|',('is_request_approval_sent', '=', True),('move_type', 'not in', ('in_invoice', 'in_refund'))]}"  string="Request Approval" type="object" class="oe_highlight" groups="kin_account.group_account_move_show_request_approval_bill_btn" />
+                       <button name="btn_request_approval" attrs="{'invisible': ['|',('is_request_approval_sent', '=', True),('move_type', '!=', 'entry')]}" string="Request Approval" type="object" class="oe_highlight" groups="kin_account.group_account_move_show_request_approval_entry_btn" />
+
                 </xpath>
 
 
