--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -321,21 +321,22 @@
                     <button name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
                         type="action" context="{'default_advance_payment_method': 'percentage'}"
                         attrs="{'invisible': ['|',('invoice_status', '!=', 'no'), ('state', '!=', 'sale')]}"/>
-                    <button name="action_quotation_send" string="Send by Email" type="object" states="draft" class="btn-primary"/>
+                    <button name="action_quotation_send" string="Send by Email" type="object" states="quote_submitted" class="btn-primary"/>
                     <button name="action_quotation_send" type="object" string="Send PRO-FORMA Invoice"
                       groups="sale.group_proforma_sales" class="btn-primary"
                       attrs="{'invisible': ['|', ('state', '!=', 'draft'), ('invoice_count','&gt;=',1)]}" context="{'proforma': True}"/>
+                    <button name="btn_request_approval"
+                        string="Request Approval" class="btn-primary" type="object"
+                        attrs="{'invisible': [('state', 'not in', ['draft','sent'])]}" />
                     <button name="action_confirm" id="action_confirm"
                         string="Confirm" class="btn-primary" type="object"
-                        attrs="{'invisible': [('state', 'not in', ['sent'])]}" groups="kin_loading.group_show_confirm_other_sale"/>
-                    <button name="action_confirm"
-                        string="Confirm" type="object"
-                        attrs="{'invisible': [('state', 'not in', ['draft'])]}"  groups="kin_loading.group_show_confirm_other_sale" />
+                        attrs="{'invisible': [('state', 'not in', ['quote_submitted'])]}" groups="kin_loading.group_show_confirm_other_sale"/>
+
                     <button name="action_quotation_send" type="object" string="Send PRO-FORMA Invoice" groups="sale.group_proforma_sales" attrs="{'invisible': ['|', ('state', '=', 'draft'), ('invoice_count','&gt;=',1)]}" context="{'proforma': True}"/>
                     <button name="action_quotation_send" string="Send by Email" type="object" states="sent,sale"/>
-                    <button name="action_cancel" type="object" string="Cancel" attrs="{'invisible': ['|', ('state', 'not in', ['draft', 'sent','sale']), ('id', '=', False)]}"/>
+                    <button name="action_cancel" type="object" string="Cancel" attrs="{'invisible': ['|', ('state', 'not in', ['draft', 'sent','sale','quote_submitted','so_to_approve']), ('id', '=', False)]}"/>
                     <button name="action_draft" states="cancel" type="object" string="Set to Quotation"/>
-                    <field name="state" widget="statusbar" statusbar_visible="draft,sent,sale"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,sent,quote_submitted,sale"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
