--- a/odoo-custom-addons/kin_stock/views/stock_tier_view.xml
+++ b/odoo-custom-addons/kin_stock/views/stock_tier_view.xml
@@ -9,8 +9,9 @@
             <field name="arch" type="xml">
                 <search position="inside">
                     <group string="Approval Status">
-                        <filter string="Awaiting my Approval" name="awaiting_approval" domain="[('reviewer_ids', '=', uid),('state','not in',('done','cancel'))]" />
+                        <filter string="Awaiting My Validation" name="awaiting_validation" domain="[('reviewer_ids', '=', uid),('state','not in',('done','cancel'))]" />
                          <filter string="Validated" name="validated" domain="[('validated', '=', True)]" />
+                        <filter string="Validate Yet Awaiting Approval" name="validated" domain="[('validated', '=', True),('state','!=','done')]" />
                     </group>
                 </search>
             </field>
